manifest/stress/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stress
  namespace: skills
  labels:
    skills/version: v1
    app: stress
spec:
  replicas: 2
  selector:
    matchLabels:
      app: stress
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 2
  template:
    metadata:
      labels:
        app: stress
        skills/version: v1
    spec:
      nodeSelector:
        eks.amazonaws.com/nodegroup: skills-app
      containers:
        - name: stress
          image: 362708816803.dkr.ecr.ap-northeast-2.amazonaws.com/stress-ecr:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
      restartPolicy: Always
