manifest/stress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stress
  namespace: skills
  labels:
    app: stress
spec:
  selector:
    app: stress
  type: ClusterIP
  ports:
    - name: stress
      protocol: TCP
      port: 8080
      targetPort: 8080
